name: SpacePartyServer
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""

executable freefalldb
    build-depends:
      base -any,
      QuickCheck -any,
      bytestring,
      network >=2.4.2.2,
      cereal,
      ghc-prim,
      binary,
      containers,
      safecopy,
      acid-state,
      mtl
    main-is: FreefallDB/Main.hs
    buildable: True
    hs-source-dirs: src
