name: FreefallDB
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""

executable freefalldb
    build-depends:
      base -any,
      QuickCheck -any,
      bytestring,
      network >=2.4.2.2,
      cereal,
      ghc-prim,
      binary,
      containers,
      safecopy,
      acid-state,
      mtl,
      msgpack-rpc,
      time == 1.4,
      fclabels
    main-is: FreefallDB/Main.hs
    buildable: True
    hs-source-dirs: src

executable client
    build-depends:
      base -any,
      QuickCheck -any,
      bytestring,
      network >=2.4.2.2,
      cereal,
      ghc-prim,
      binary,
      containers,
      safecopy,
      acid-state,
      mtl,
      msgpack-rpc,
      time == 1.4,
      transformers,
      fclabels
    main-is: FreefallDB/Client.hs
    buildable: True
    hs-source-dirs: src
