name: FreefallDB-client
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:
data-dir: ""

executable client
    build-depends:
      base -any,
      QuickCheck -any,
      bytestring,
      msgpack-rpc,
      transformers
    main-is: FreefallDB/Client.hs
    buildable: True
    hs-source-dirs: src

library
  build-depends:
    base,
    bytestring,
    msgpack-rpc
  exposed-modules: FreefallDB.World.BoardClientLibrary
  hs-source-dirs: src
  c-sources: src/cbits/StartEnd.c
  extensions: ForeignFunctionInterface
  ghc-options: -no-hs-main -shared -o freefalldb-client.dll
  if os(windows)
    build-depends: Win32

